# Limo

./: .gitmodules
pybind/: .gitignore  CMakeLists.txt  CMakeVars.cmake  run-tests.cmd
pybind/include/: ds1820.hpp  lemonator_interface.hpp  lemonator_proxy.hpp  py-interface.hpp  sr04.hpp  tcs3200.hpp
pybind/src/: main.cpp  statemachine.cpp
pybind/tests/: test.py
simulator-3.7/: Controller.py  Disturbance.py  Effector.py  Gui.py
simulator-3.x/: Constants.py  Sensor.py
simulator-3.x/src/: lemonator.pyd  main.py
simulator-3.x/src/blackbox/: Controller.py  Gui.py  Simulator.py  Vessel.py
simulator-3.x/src/states/: states.py  utills.py
src/: main.py
